--- a/.github/workflows/main_onnipaj-w4-5-assignment.yml
+++ b/.github/workflows/main_onnipaj-w4-5-assignment.yml
@@ -24,6 +24,9 @@ jobs:
       - name: npm install, build, and test
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          AUTH_URL: ${{ secrets.AUTH_URL }}
+          UPLOAD_URL: ${{ secrets.UPLOAD_URL }}
         run: |
           npm install
           npm run build --if-present
