--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A basic starter for an express.js API with Typescript & GraphQL",
   "main": "dist/src/index.js",
   "scripts": {
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "copyGraphql": "copyfiles --error src/api/schemas/*.graphql dist",
